Fix style for button align

--- a/src/components/toolbar/components/alignment/editor.scss
+++ b/src/components/toolbar/components/alignment/editor.scss
@@ -4,11 +4,15 @@
 	}
 	.maxi-alignment-control {
 		.maxi-base-control__field {
-			display: block !important;
 			margin-bottom: 0;
-		}
-		.maxi-button-group-control__option {
-			display: block;
+			.maxi-tabs-control {
+				display: block !important;
+				margin-bottom: 0;
+				&__button {
+					display: block;
+					align-items: flex-start;
+				}
+			}
 		}
 	}
 }
